[gd_scene load_steps=17 format=3 uid="uid://cu33ydpx8lnkt"]

[ext_resource type="Script" path="res://player.gd" id="1_af3mi"]
[ext_resource type="PackedScene" uid="uid://bex41f6sr8f0x" path="res://saber.tscn" id="2_vsm7g"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cog7a"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_d2r8r"]

[sub_resource type="SphereMesh" id="SphereMesh_ug8d2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5pvm4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_m0xti"]
height = 3.925
radius = 0.174

[sub_resource type="BoxShape3D" id="BoxShape3D_qxtjb"]
size = Vector3(2, 0.5, 1)

[sub_resource type="Animation" id="Animation_wr6rt"]
resource_name = "Attack"
length = 0.412
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1.01297, -0.25436, 0.0121899), Vector3(1.16935, 2.09793, 1.15913), Vector3(1.01297, -0.25436, 0.0121899)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.283458, 0.0339116, 0.124722), Vector3(-0.283458, 0.0339116, 0.215401), Vector3(-0.283458, 0.0339116, 0.124722)]
}

[sub_resource type="Animation" id="Animation_hns2p"]
resource_name = "Attack_animation_2"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.283458, 0.0339116, 0.124722), Vector3(-0.283458, 0.0339116, -0.0241155), Vector3(-0.283382, 0.0339263, 1.06066), Vector3(0.0603529, 0.0339509, 2.36034), Vector3(-0.283, 0.034, 0.125)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1, 1.2, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.01297, -0.25436, 0.0121899), Vector3(1.01297, -2.09259, 0.0121899), Vector3(1.21697, 0.815562, 1.47287), Vector3(1.21697, 1.91088, 1.47287), Vector3(1.21697, 2.25682, 1.47287), Vector3(1.21697, 1.82586, 1.47287), Vector3(1.21697, 1.05254, 1.47287), Vector3(1.01229, -0.254818, 0.0122173)]
}

[sub_resource type="Animation" id="Animation_p6n5t"]
resource_name = "walking"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.01297, -0.25436, 0.0121899), Vector3(1.1959, -0.372287, -0.119247), Vector3(1.07562, -0.284109, -0.0222007), Vector3(1.23695, -0.418599, -0.168616), Vector3(1.01229, -0.254818, -0.0122173)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrscv"]
_data = {
"Attack": SubResource("Animation_wr6rt"),
"Attack_animation_2": SubResource("Animation_hns2p"),
"walking": SubResource("Animation_p6n5t")
}

[sub_resource type="Animation" id="Animation_361lx"]
resource_name = "counter_attack"
length = 0.624
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Saber:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.283458, 0.0339116, 0.283055), Vector3(-0.283458, 0.0339116, 0.283055)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Saber:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.01229, 1.28959, 0.0122173), Vector3(1.23005, -1.11514, -2.45645), Vector3(0.435492, 1.11307, 0.0684194), Vector3(1.01229, 1.28959, 0.0122173)]
}

[sub_resource type="Animation" id="Animation_oqv2h"]
resource_name = "guard_off"
length = 0.2115
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Saber:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.01229, 1.28959, 0.0122173), Vector3(1.01297, -0.25436, 0.0121899)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Saber:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.283458, 0.0339116, 0.283055), Vector3(-0.283458, 0.0339116, 0.12038)]
}

[sub_resource type="Animation" id="Animation_rln7n"]
resource_name = "guard_on"
length = 0.2115
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Saber:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.01297, -0.25436, 0.0121899), Vector3(1.01229, 1.28959, 0.0122173)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Saber:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.283458, 0.0339116, 0.12038), Vector3(-0.283458, 0.0339116, 0.283055)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kdubf"]
_data = {
"counter_attack": SubResource("Animation_361lx"),
"guard_off": SubResource("Animation_oqv2h"),
"guard_on": SubResource("Animation_rln7n")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_af3mi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("SphereShape3D_cog7a")

[node name="Pivot" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
material_override = SubResource("ORMMaterial3D_d2r8r")
mesh = SubResource("SphereMesh_ug8d2")

[node name="SithDetector" type="Area3D" parent="."]
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="SithDetector"]
transform = Transform3D(0.569, 0, 0, 0, 0.569, 0, 0, 0, 0.569, 0, 0, 0)
shape = SubResource("SphereShape3D_5pvm4")

[node name="SithDetector2" type="Area3D" parent="."]
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="SithDetector2"]
transform = Transform3D(0.569, 0, 0, 0, 0.569, 0, 0, 0, 0.569, 0, 0, 0)
shape = SubResource("SphereShape3D_5pvm4")

[node name="Saber" parent="." instance=ExtResource("2_vsm7g")]
transform = Transform3D(0.0965024, -0.0225573, -0.0133577, 0.000647402, 0.052988, -0.0848048, 0.0262076, 0.0817522, 0.0512809, -0.283, 0.034, 0.125)

[node name="SaberArea3D" type="Area3D" parent="Saber"]
transform = Transform3D(1, -1.49012e-08, -2.23517e-08, 0, 1, 2.98023e-08, 0, 2.98023e-08, 1, 0, 0, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Saber/SaberArea3D"]
transform = Transform3D(0.999998, -4.47035e-08, -1.49012e-08, -3.12924e-07, 0.999998, -7.7486e-07, 1.93715e-07, 6.25849e-07, 0.999998, -0.00150776, 3.06715, -0.0121059)
shape = SubResource("CylinderShape3D_m0xti")

[node name="AttackZone" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.784103)
shape = SubResource("BoxShape3D_qxtjb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Saber")
libraries = {
"": SubResource("AnimationLibrary_vrscv")
}

[node name="AnimationGuard" type="AnimationPlayer" parent="."]
root_node = NodePath(".")
libraries = {
"": SubResource("AnimationLibrary_kdubf")
}

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Saber")
libraries = {
"": SubResource("AnimationLibrary_vrscv")
}

[connection signal="body_entered" from="SithDetector" to="." method="_on_blast_detector_body_entered"]
[connection signal="body_entered" from="SithDetector2" to="." method="_on_saber_body_entered"]
[connection signal="body_entered" from="Saber/SaberArea3D" to="." method="_on_area_3d_body_entered"]
